@@ -11,6 +11,7 @@
 #include "src/xbt_modinter.h" /* prototype of os thread module's init/exit in XBT */
 #include "xbt/function_types.h"
 
+#include <boost/core/demangle.hpp>
 #include <functional>
 #include <utility>
 
@@ -103,7 +104,7 @@ void ThreadContext::wrapper(ThreadContext* context)
     XBT_DEBUG("Caught a ForcefulKillException in Thread::wrapper");
     xbt_assert(not context->is_maestro(), "Maestro shall not receive ForcefulKillExceptions, even when detached.");
   } catch (simgrid::Exception const& e) {
-    XBT_INFO("Actor killed by an uncaught exception %s", simgrid::xbt::demangle(typeid(e).name()).get());
+    XBT_INFO("Actor killed by an uncaught exception %s", boost::core::demangle(typeid(e).name()).c_str());
     throw;
   }
   // Signal to the caller (normally the maestro) that we have finished:
