@@ -8,6 +8,7 @@
 #include <xbt/config.hpp>
 #include <xbt/log.hpp>
 
+#include <boost/core/demangle.hpp>
 #include <mutex>
 #include <sstream>
 
@@ -34,11 +35,11 @@ UnimplementedError::~UnimplementedError()   = default;
 void log_exception(e_xbt_log_priority_t prio, const char* context, std::exception const& exception)
 {
   try {
-    auto name = simgrid::xbt::demangle(typeid(exception).name());
+    std::string name = boost::core::demangle(typeid(exception).name());
 
     auto* with_context = dynamic_cast<const simgrid::Exception*>(&exception);
     if (with_context != nullptr) {
-      XBT_LOG(prio, "%s %s by %s/%d: %s", context, name.get(), with_context->throw_point().procname_.c_str(),
+      XBT_LOG(prio, "%s %s by %s/%d: %s", context, name.c_str(), with_context->throw_point().procname_.c_str(),
               with_context->throw_point().pid_, exception.what());
       // Do we have a backtrace?
       if (not simgrid::config::get_value<bool>("exception/cutpath")) {
@@ -46,7 +47,7 @@ void log_exception(e_xbt_log_priority_t prio, const char* context, std::exceptio
         XBT_LOG(prio, "Backtrace:\n%s", backtrace.c_str());
       }
     } else {
-      XBT_LOG(prio, "%s %s: %s", context, name.get(), exception.what());
+      XBT_LOG(prio, "%s %s: %s", context, name.c_str(), exception.what());
     }
   } catch (...) {
     // Don't log exceptions we got when trying to log exception
